# Myriad

./: .gitignore  .gitmodules  CMakeLists.txt  CYCLE_TIMING_REPORT.md  CYCLE_TIMING_REPORT_UPDATED.md  b_dsp_clock .pio  dsp_clock.pio  myriad_A.c  myriad_A.cpp  myriad_B.c  octave table.ods  pins.h  readme.md  saw.h
Myriad_A/: ADCCalDefault.hpp  ADCProfile.hpp  FixedPointExp2f.hpp  Myriad_A.ino  ResponsiveFilter.hpp  boids.h  calibration.hpp  debouncer.hpp  displayPortal.h  drawing.h  exp2Table.hpp  fastExpFixed.hpp  file_utils.hpp  fixedlpf.hpp  medians.hpp  metaOscs.hpp  sinetable.h  state.hpp  tuning.hpp
Myriad_B/: Myriad_B.ino
arduino_libmyriad/: README_sinetable_fixed.md  SLIP.h  bitstreams.hpp  clockfreq.h  dsp_clock.pio.h  fixedpoint.hpp  freqlookup.h  metaOscSinesFMultipleFixed.hpp  metaOscSinesFixed.hpp  mode_all.h  mode_saw.h  mode_sqr.h  mode_tri.h  myriad_messages.h  myriad_pins.h  myriad_setup.h  octaves.hpp  oscDisplayModes.hpp  oscVisData.hpp  oscillatorModels.hpp  perf.hpp  pio_expdec.h  sinetable_fixed.hpp  smBitStreamOsc.h  streamMessaging.hpp  synthparams.h  utils.hpp
arduino_libmyriad/oscmodels/: bellSDOscillatorModel.hpp  expPulse2SDOscillatorModel.hpp  expPulseSDOscillatorModel.hpp  formantSDOscillatorModel.hpp  noiseOscillatorModelSD.hpp  oscexpts.hpp  oscillatorModel.hpp  parasineSDOscillatorModel.hpp  pulsePWOscillatorModel.hpp  pulseSDOscillatorModel.hpp  sawOscillatorModel.hpp  sharkTeethSDOscillatorModel.hpp  silentOscillatorModel.hpp  smoothThreshSDOscillatorModel.hpp  triOscillatorModel.hpp  triSDVar1OscillatorModel.hpp  triTeethOscillatorModel.hpp  whiteNoiseOscillatorModel.hpp
arduino_libmyriad/pios/: pio_bitbybit.h  pio_expdec.h  pio_pulse.h  pio_sq.h
calibration/py/: Untitled.ipynb
calibration/rp2040_adc_calibration/: rp2040_adc_calibration.ino
hardware/: myriad 0.2 panel.stl  myriad panel.scad  myriad panel.stl  spacers.scad  spacers.stl
hardware/myriad/: _autosave-myriad.kicad_pcb  myriad.kicad_prl  myriad.kicad_pro
hardware/myriad_0.2/: #auto_saved_files#  myriad_0.2.kicad_pcb  myriad_0.2.kicad_prl  myriad_0.2.kicad_pro  myriad_0.2.kicad_sch
hardware/myriad_0.3/: myriad_0.3.kicad_pcb  myriad_0.3.kicad_prl  myriad_0.3.kicad_pro  myriad_0.3.kicad_sch
hardware/myriad_0.4/: drive.kicad_sch  myriad_0.4.kicad_prl  myriad_0.4.kicad_pro  myriad_0.4.kicad_sch  untitled.kicad_sch
hardware/myriad_0.5/: drive.kicad_sch  myriad_0.5.kicad_prl  myriad_0.5.kicad_pro  myriad_0.5.kicad_sch  untitled.kicad_sch
hardware/panel/myriad2026run/: myriad-all_layers-filled.ai  myriad-all_layers.ai
hardware/panel/myriadPCBPanel/: myriadPCBPanel.kicad_pcb  myriadPCBPanel.kicad_prl  myriadPCBPanel.kicad_pro
hardware/panel/myriadPCBPanel_0.3/: myriadPCBPanel_0.3.kicad_pcb  myriadPCBPanel_0.3.kicad_prl  myriadPCBPanel_0.3.kicad_pro
py/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  bitstreams.ipynb  bitstreams2.ipynb  bitstreams3.ipynb  errMod.ipynb  freqtable.ipynb  spectrum_images.py  triPW.ipynb  triVPeak.ipynb  waveform_images.py
py/.ipynb_checkpoints/: freqtable-checkpoint.ipynb
py/specinit/: specinit tests.ipynb
setup/: setup.md
test/: parabolic.html
tests/: CMakeLists.txt  README.md  RESULTS.md  build_rp2040.sh  test_metaOscSinesFixed.cpp  test_sinetable_fixed.cpp  test_sinetable_rp2040.cpp
tests/build_rp2040/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
tests_rp2040/: HARDWARE_INTERPOLATOR_NOTES.md  HW_INTERP_SUMMARY.md  README.md  README_WORKFLOW.md  test_sinetable_rp2040.cpp
(+9 files in other folders)
